--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -583,9 +583,7 @@
     "        for neighbor in self.model.get_neighbors(position[0], position[1]):\n",
     "            if self.model.is_valid_position(neighbor) and not self.visited_cells[neighbor[0]][neighbor[1]]:\n",
     "                unkown += 1\n",
-    "        return unkown\n",
-    "    \n",
-    "   "
+    "        return unkown\n"
    ]
   },
   {
@@ -594,209 +592,145 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PepeAgent(ap.Agent):\n",
+    "class PepeAgent(RodrigoAgent):\n",
     "    \"\"\"\n",
-    "    Se mueve con movimientos al azar, pero si encuentra una caja la agarra \n",
-    "    y entuentra el mejor camino al centro\n",
-    "    \"\"\"\n",
+    "    PepeAgent modifica la estrategia de exploración con las siguientes diferencias:\n",
+    "    -Prioriza explorar áreas con posibles pilas de cajas\n",
+    "    -Utiliza un enfoque más agresivo para buscar cajas\n",
+    "    -Implementa un método diferente de selección de celdas no visitadas \"\"\"\n",
     "    \n",
-    "    def setup(self):\n",
-    "        self.intention = None  # Intención actual (pick_up, stack, move o wait)\n",
-    "        self.intention_position = None  # Posición objetivo al hacer acción\n",
-    "        \n",
-    "        self.nearby_single_boxes = []  # Coordenadas de las cajas cercanas (stacks de 1 sola caja)\n",
-    "        self.nearby_box_stack = []  # Coordenadas de stacks de cajas cercanos (stacks de más de 1 caja)\n",
-    "        self.has_box = False\n",
-    "        \n",
-    "        self.looking_direction = \"Up\"  # Dirección en la que está mirando\n",
-    "        \n",
-    "        # Inicializar tablero interno\n",
-    "        self.internal_board = [\n",
-    "            [0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
-    "        ]\n",
-    "        \n",
-    "        self.bfs_path = []  # Lista de movimientos para el BFS\n",
-    "        self.discharge_locations = self.model.discharge_locations\n",
-    "        self.discharge_location = (-1, -1) # al principio no hay ninguna seleccionada\n",
-    "\n",
-    "    def setup_position(self, start_position):\n",
-    "        self.position = start_position  # Posición inicial del agente\n",
-    "        \n",
-    "    def see(self):\n",
-    "        \"\"\" Percibe su entorno y actualiza el internal_board \"\"\"\n",
-    "        x, y = self.position\n",
-    "        self.nearby_single_boxes = []\n",
-    "        self.nearby_box_stack = []\n",
-    "        \n",
-    "        neighbors = self.model.get_neighbors(x, y)\n",
-    "        for neighbor_pos in neighbors:\n",
-    "            i, j = neighbor_pos\n",
-    "            if not self.model.is_valid_position(neighbor_pos):\n",
-    "                continue\n",
-    "            \n",
-    "            box_count = self.model.box_count[i][j]\n",
-    "            self.internal_board[i][j] = box_count\n",
-    "            \n",
-    "            if box_count == 1 and (i, j) not in self.discharge_locations:\n",
-    "                self.nearby_single_boxes.append(neighbor_pos)\n",
-    "            elif 1 <= box_count <= 4:\n",
-    "                self.nearby_box_stack.append(neighbor_pos)\n",
-    "    \n",
-    "    def choose_plan(self):\n",
-    "        \"\"\" Escoge el plan según el estado actual \"\"\"\n",
-    "        if self.has_box:\n",
-    "            return \"find_discharge_location\"\n",
-    "        else:\n",
-    "            return \"explore\"\n",
-    "    \n",
-    "    def find_discharge_location(self):\n",
-    "        \"\"\" Encuentra la ruta a una discharge_location usando BFS \"\"\"\n",
-    "        # Vemos si alguno de los vecinos es la discharge_location que buscamos\n",
-    "        for neighbor in self.model.get_neighbors(*self.position):\n",
-    "            \n",
-    "            if (int(neighbor[0]), int(neighbor[1])) == (int(self.discharge_location[0]), int(self.discharge_location[1])):\n",
-    "                if self.model.box_count[neighbor[0]][neighbor[1]] < 5:\n",
-    "                    self.intention = \"stack\"\n",
-    "                    self.intention_position = neighbor\n",
-    "                    \n",
-    "                    # checamos si hay un agente en la posicion donde queremos poner una caja que es adjacente a nosotros  \n",
-    "                    for agent in self.model.all_agents:\n",
-    "                        if np.array_equal(agent.position, self.intention_position):  # Si pasa hacemos un movimiento random\n",
-    "                            self.intention = \"move\"\n",
-    "                            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                    self.bfs_path = []\n",
-    "                    return\n",
-    "                else:\n",
-    "                    self.bfs_path = []\n",
-    "            \n",
-    "\n",
-    "        # Si no hemos computado el mejor camino al centro lo encontramos con bfs\n",
-    "        if not self.bfs_path:\n",
-    "            start = self.position\n",
-    "            # Calculamos el centro del tablero\n",
-    "            center_x, center_y = self.p.n / 2, self.p.m / 2\n",
-    "\n",
-    "            # Filtramos las locaciones invalidas\n",
-    "            valid_discharge_locations = [\n",
-    "                loc for loc in self.discharge_locations\n",
-    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
-    "            ]\n",
-    "\n",
-    "            # Seleccionamos la mas cercana al centro\n",
-    "            if valid_discharge_locations:\n",
-    "                self.discharge_location = min(\n",
-    "                    valid_discharge_locations,\n",
-    "                    key=lambda loc: ((loc[0] - center_x) ** 2 + (loc[1] - center_y) ** 2) ** 0.5\n",
-    "                )\n",
-    "            else:\n",
-    "                return\n",
-    "            # Encontramos el mejor camino\n",
-    "            self.bfs_path = self.bfs(start, self.discharge_location)\n",
-    "            if self.bfs_path:\n",
-    "                self.bfs_path.pop(0)\n",
-    "        \n",
-    "        if self.bfs_path:\n",
-    "            # Nos intentamos mover a la posicion siguiente\n",
-    "            self.intention_position = self.bfs_path.pop(0)\n",
-    "            x, y = self.intention_position\n",
-    "            self.intention = \"move\"\n",
-    "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                # Hacemos movimiento random\n",
-    "                self.intention = \"move\"\n",
-    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                self.bfs_path = []\n",
-    "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def bfs(self, start, goal):\n",
-    "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
+    "    def find_unvisited_path(self, start):\n",
+    "        \"\"\" \n",
+    "        BFS modificado para priorizar caminos cerca de posibles ubicaciones de cajas \n",
+    "        y áreas con menos vecinos visitados\n",
+    "        \"\"\"\n",
     "        from collections import deque\n",
     "        queue = deque([(start, [])])\n",
     "        visited = set()\n",
+    "        possible_paths = []\n",
     "        \n",
     "        while queue:\n",
     "            current, path = queue.popleft()\n",
     "            \n",
-    "            # Encontramos un camino\n",
-    "            if tuple(current) == tuple(goal):  \n",
-    "                return path + [current]\n",
+    "            # Priorizar caminos cerca de posibles ubicaciones de cajas o con menos vecinos visitados\n",
+    "            if (not self.visited_cells[current[0]][current[1]] and \n",
+    "                current not in self.discharge_locations):\n",
+    "                # Puntuar el camino basado en la proximidad a posibles ubicaciones de cajas\n",
+    "                box_proximity_score = self.calculate_box_proximity(current)\n",
+    "                unvisited_neighbors_score = self.count_unvisited_neighbors(current)\n",
+    "                \n",
+    "                possible_paths.append((path + [current], box_proximity_score + unvisited_neighbors_score))\n",
     "            \n",
     "            if tuple(current) in visited:\n",
     "                continue\n",
     "            visited.add(tuple(current))\n",
     "            \n",
     "            for neighbor in self.model.get_neighbors(current[0], current[1]):\n",
-    "                if self.model.is_valid_position(neighbor) and tuple(neighbor) not in visited and (self.internal_board[neighbor[0]][neighbor[1]] == 0 or np.array_equal(neighbor, goal)): # Checo en mi internal_board\n",
+    "                if (self.model.is_valid_position(neighbor) and \n",
+    "                    tuple(neighbor) not in visited and \n",
+    "                    self.internal_board[neighbor[0]][neighbor[1]] == 0):\n",
     "                    queue.append((neighbor, path + [current]))\n",
-    "        return []  # No econtramos camino\n",
+    "        \n",
+    "        # Si se encuentran caminos, seleccionar basado en la puntuación combinada\n",
+    "        if possible_paths:\n",
+    "            return max(possible_paths, key=lambda x: x[1])[0]\n",
+    "        \n",
+    "        return []  # No se encontró camino\n",
+    "    \n",
+    "    def calculate_box_proximity(self, position):\n",
+    "        \"\"\" \n",
+    "        Calcular una puntuación basada en la proximidad a posibles ubicaciones de cajas \n",
+    "        y pilas de cajas conocidas\n",
+    "        \"\"\"\n",
+    "        proximity_score = 0\n",
+    "        for box_location in self.seen_box_stack + self.nearby_box_stack:\n",
+    "            # Calcular la distancia de Manhattan\n",
+    "            distance = abs(position[0] - box_location[0]) + abs(position[1] - box_location[1])\n",
+    "            # Puntuación inversa de la distancia (ubicaciones más cercanas obtienen puntuaciones más altas)\n",
+    "            proximity_score += max(0, 10 - distance)\n",
+    "        \n",
+    "        return proximity_score\n",
+    "    \n",
+    "    def count_unvisited_neighbors(self, position):\n",
+    "        \"\"\" \n",
+    "        Contar celdas vecinas no visitadas para fomentar la exploración \n",
+    "        de áreas menos exploradas\n",
+    "        \"\"\"\n",
+    "        unvisited_count = 0\n",
+    "        for neighbor in self.model.get_neighbors(position[0], position[1]):\n",
+    "            if (self.model.is_valid_position(neighbor) and \n",
+    "                not self.visited_cells[neighbor[0]][neighbor[1]]):\n",
+    "                unvisited_count += 1\n",
+    "        \n",
+    "        return unvisited_count * 2  # Multiplicar para aumentar el peso\n",
     "    \n",
     "    def explore(self):\n",
-    "        \"\"\" Explora el entorno \"\"\"\n",
-    "        self.intention = \"wait\"  # Por defecto, espera\n",
+    "        \"\"\" \n",
+    "        Estrategia de exploración modificada con búsqueda de cajas más agresiva \n",
+    "        y selección inteligente de celdas\n",
+    "        \"\"\"\n",
+    "        self.intention = \"wait\"  # Por defecto, esperar\n",
+    "        \n",
+    "        # Priorizar recoger cajas individuales de manera más agresiva\n",
     "        if not self.has_box and self.nearby_single_boxes:\n",
+    "            self.unvisited_path = []\n",
     "            self.intention = \"pick_up\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
+    "            # Elegir la caja más cercana a posibles ubicaciones de descarga\n",
+    "            self.intention_position = min(\n",
+    "                self.nearby_single_boxes,\n",
+    "                key=lambda pos: self.calculate_discharge_distance(pos)\n",
+    "            )\n",
     "        else:\n",
+    "            # Si no hay cajas individuales, seguir la estrategia de exploración modificada\n",
+    "            if self.seen_box_stack:\n",
+    "                # Persecución de cajas más estratégica\n",
+    "                self.chase_strategic_box()\n",
+    "            else:\n",
+    "                # Usar el método modificado para encontrar celdas no visitadas\n",
+    "                self.visit_nearest_unvisited()\n",
+    "    \n",
+    "    def calculate_discharge_distance(self, position):\n",
+    "        \"\"\" \n",
+    "        Calcular la distancia a la ubicación de descarga más cercana \n",
+    "        desde una posición dada\n",
+    "        \"\"\"\n",
+    "        return min(\n",
+    "            ((position[0] - loc[0])**2 + (position[1] - loc[1])**2)**0.5\n",
+    "            for loc in self.discharge_locations\n",
+    "        )\n",
+    "    \n",
+    "    def chase_strategic_box(self):\n",
+    "        \"\"\" \n",
+    "        Un enfoque más estratégico para perseguir cajas \n",
+    "        \"\"\"\n",
+    "        if not self.seen_box_path:\n",
+    "            start = self.position\n",
+    "            # Elegir la caja con la mejor posición estratégica\n",
+    "            strategic_box = max(\n",
+    "                self.seen_box_stack, \n",
+    "                key=lambda box: (\n",
+    "                    self.calculate_box_proximity(box),\n",
+    "                    self.count_unvisited_neighbors(box)\n",
+    "                )\n",
+    "            )\n",
+    "            self.seen_box_path = self.bfs(start, strategic_box)\n",
+    "            if self.seen_box_path:\n",
+    "                self.seen_box_path.pop(0)\n",
+    "        \n",
+    "        if self.seen_box_path:\n",
+    "            # Intentar moverse a la siguiente posición\n",
+    "            self.intention_position = self.seen_box_path.pop(0)\n",
+    "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def next(self):\n",
-    "        \"\"\" Determina el siguiente paso \"\"\"\n",
-    "        plan = self.choose_plan()\n",
-    "        if plan == \"find_discharge_location\":\n",
-    "            self.find_discharge_location()\n",
-    "        elif plan == \"explore\":\n",
-    "            self.explore()\n",
-    "    \n",
-    "    def action(self):\n",
-    "        \"\"\" Ejecuta la acción \"\"\"\n",
-    "        if self.intention == \"stack\":\n",
-    "            self.stack_boxes(*self.intention_position)\n",
-    "        elif self.intention == \"pick_up\":\n",
-    "            self.pick_box(*self.intention_position)\n",
-    "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
-    "            self.position = self.intention_position\n",
-    "    def move(self):\n",
-    "        \"\"\" Ejecuta un movimiento \"\"\"\n",
-    "        if not self.model.is_floor_organized:\n",
-    "            self.model.total_moves += 1\n",
-    "        self.see()\n",
-    "        self.next()\n",
-    "        self.action()\n",
-    "        self.model.record_move(self)\n",
-    "    \n",
-    "    def pick_box(self, x, y):\n",
-    "        \"\"\" Recoge una caja \"\"\"\n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, -1):\n",
-    "            self.has_box = True\n",
+    "            \n",
+    "            # Manejar posiciones de movimiento no válidas\n",
+    "            if not self.model.is_valid_move_position(self.intention_position):\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
+    "                self.seen_box_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    \n",
-    "    def stack_boxes(self, x, y):\n",
-    "        \"\"\" Apila una caja \"\"\"\n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, 1):\n",
-    "            self.has_box = False\n",
-    "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    \n",
-    "    def updateLookingDirection(self, to_x, to_y):\n",
-    "        \"\"\" Actualiza la dirección de visión del agente \"\"\"\n",
-    "        from_x, from_y = self.position\n",
-    "        if to_x > from_x:\n",
-    "            self.looking_direction = \"down\"\n",
-    "        elif to_x < from_x:\n",
-    "            self.looking_direction = \"up\"\n",
-    "        elif to_y > from_y:\n",
-    "            self.looking_direction = \"right\"\n",
-    "        elif to_y < from_y:\n",
-    "            self.looking_direction = \"left\"\n"
+    "            self.intention = \"wait\""
    ]
   },
   {
