--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -750,112 +750,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HectorAgent(ap.Agent):\n",
-    "    \"\"\" \n",
-    "    Se mueve a celdas al azar\n",
-    "    Cuando se encuentre una celda con una sola caja, la recoge\n",
-    "    Si esta cargando una caja y ve otra caja, las apila\n",
+    "class HectorAgent(RodrigoAgent):\n",
+    "    \"\"\"\n",
+    "    Las reglas de este agente son las siguientes:\n",
+    "        - Divide el espacio en cuadrantes y cada agente se especializa en uno\n",
+    "        - Si encuentra una caja cerca, selecciona la más estratégica considerando:\n",
+    "            * Distancia a puntos de descarga\n",
+    "            * Potencial para completar pilas existentes\n",
+    "        - Si tiene una caja, busca el punto de descarga más eficiente y traza la ruta más corta\n",
+    "        - Si ve cajas que recordó antes, persigue la más cercana\n",
+    "        - De lo contrario, explora su cuadrante en patrón espiral desde el centro\n",
+    "        - Balancea entre explorar áreas nuevas y optimizar rutas conocidas\n",
     "    \"\"\"\n",
     "    \n",
-    "    \n",
     "    def setup(self):\n",
-    "        self.intention = None  # Intención actual (pick_up, stack, move o wait)\n",
-    "        self.intention_position = None  # Posicion bjetivo al hacer accion\n",
-    "        \n",
-    "        self.nearby_single_boxes = []  # Coordenadas de las cajas cercanas, en stacks de 1 sola caja\n",
-    "        self.nearby_box_stack = []  # Coordenadas de stacks de cajas cercanos. Stacks de mas de 1 caja\n",
-    "        self.has_box = False\n",
-    "        \n",
-    "        self.looking_direction = \"Up\"  # To facilitate later designing a simulation\n",
-    "        \n",
-    "    def setup_position(self, start_position):\n",
-    "        self.position = start_position # Posición del agente (x, y)\n",
-    "        \n",
-    "    def see(self):\n",
-    "        \"\"\" Percibe su entorno \"\"\"\n",
-    "        x, y = self.position\n",
-    "        self.nearby_single_boxes = []\n",
-    "        self.nearby_box_stack = []\n",
-    "        \n",
-    "        neighbors = self.model.get_neighbors(x, y) \n",
-    "        for neighbor_pos in neighbors:\n",
-    "            i, j = neighbor_pos\n",
-    "            if not self.model.is_valid_position(neighbor_pos):\n",
-    "                continue\n",
-    "            \n",
-    "            if self.model.box_count[i][j] == 1:\n",
-    "                self.nearby_single_boxes.append(neighbor_pos)\n",
-    "            \n",
-    "            if 1 <= self.model.box_count[i][j] <= 4: # Make sure no more than 5!\n",
-    "                self.nearby_box_stack.append(neighbor_pos)  # Stacks de 1 cuentan para iniciar un stack\n",
+    "        super().setup()\n",
+    "        self.quadrant = None\n",
+    "        self.last_stack_pos = None\n",
     "    \n",
-    "    def next(self):\n",
-    "        \"\"\" Decide la próxima acción según lo que percibe \"\"\"\n",
-    "        self.intention = \"wait\" # por defecto espera\n",
-    "        \n",
-    "        temporary_intention = \"wait\"\n",
-    "        if not self.has_box and len(self.nearby_single_boxes) > 0:\n",
-    "            temporary_intention = \"pick_up\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
-    "        elif self.has_box and len(self.nearby_box_stack) > 0:\n",
-    "            temporary_intention = \"stack\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_box_stack)\n",
-    "        else:\n",
-    "            temporary_intention = \"move\"\n",
-    "            self.intention_position = self.model.random.choice(\n",
-    "                self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "    def explore(self):\n",
+    "        if not self.has_box and self.nearby_single_boxes:\n",
+    "            self.intention = \"pick_up\"\n",
+    "            self.intention_position = min(\n",
+    "                self.nearby_single_boxes,\n",
+    "                key=lambda pos: self.calculate_box_priority(pos)\n",
     "            )\n",
-    "            \n",
-    "        if self.model.is_valid_position(self.intention_position):\n",
-    "            self.intention = temporary_intention\n",
+    "        else:\n",
+    "            if not self.quadrant:\n",
+    "                self.quadrant = self.id % 4\n",
     "                \n",
-    "    def action(self):\n",
-    "        \"\"\" Ejecuta la accion \"\"\"\n",
-    "        x, y = self.intention_position\n",
-    "        if self.intention == \"stack\":\n",
-    "            self.stack_boxes(x, y)\n",
-    "        elif self.intention == \"pick_up\":\n",
-    "            self.pick_box(x, y)\n",
-    "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
-    "            self.position = self.intention_position\n",
-    "            \n",
-    "    def move(self):\n",
-    "        if not self.model.is_floor_organized:\n",
-    "            self.model.total_moves += 1\n",
-    "        self.see()\n",
-    "        self.next()\n",
-    "        self.action()\n",
-    "        # saving move to  move_stack\n",
-    "        self.model.record_move(self)\n",
-    "    \n",
-    "    \"\"\" Aux functions \"\"\"\n",
-    "    # Assumes that given position is valid\n",
-    "    def pick_box(self, x, y):\n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, -1):\n",
-    "            self.has_box = 1\n",
-    "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    \n",
-    "    # Assumes that given position is valid\n",
-    "    def stack_boxes(self, x, y): \n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, 1):\n",
-    "            self.has_box = 0\n",
-    "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    def updateLookingDirection(self, to_x, to_y):\n",
-    "        from_x, from_y = self.position\n",
+    "            if self.seen_box_stack:\n",
+    "                self.chase_nearest_box()\n",
+    "            else:\n",
+    "                self.spiral_explore()\n",
+    "\n",
+    "    def calculate_box_priority(self, pos):\n",
+    "        discharge_dist = min(abs(pos[0] - dx) + abs(pos[1] - dy) \n",
+    "                            for dx, dy in self.discharge_locations)\n",
     "        \n",
-    "        # TODO: Verify which side is up in simulation. Rn positive x is down, positive y is right\n",
-    "        if to_x > from_x:\n",
-    "            self.looking_direction = \"down\"\n",
-    "        elif to_x < from_x:\n",
-    "            self.looking_direction = \"up\"\n",
-    "        elif to_y > from_y:\n",
-    "            self.looking_direction = \"right\"\n",
-    "        elif to_y < from_y:\n",
-    "            self.looking_direction = \"left\"  \n"
+    "        stack_potential = sum(1 for nx, ny in self.model.get_neighbors(*pos)\n",
+    "                            if self.model.is_valid_position((nx, ny)) and\n",
+    "                            0 < self.model.box_count[nx][ny] < 5)\n",
+    "        \n",
+    "        return discharge_dist / (1 + 2*stack_potential)  \n",
+    "                \n",
+    "    def chase_nearest_box(self):\n",
+    "        if self.seen_box_stack:\n",
+    "            target = min(self.seen_box_stack,\n",
+    "                        key=lambda pos: abs(pos[0] - self.position[0]) + \n",
+    "                                      abs(pos[1] - self.position[1]))\n",
+    "            path = self.bfs(self.position, target)\n",
+    "            if path and len(path) > 1:\n",
+    "                self.intention = \"move\"\n",
+    "                self.intention_position = path[1]\n",
+    "            else:\n",
+    "                self.default_movement()\n",
+    "        else:\n",
+    "            self.default_movement()\n",
+    "\n",
+    "    def spiral_explore(self):\n",
+    "        center_x = self.model.p.n // 2\n",
+    "        center_y = self.model.p.m // 2\n",
+    "        quadrant_x = [-1, -1, 1, 1][self.quadrant]\n",
+    "        quadrant_y = [-1, 1, -1, 1][self.quadrant]\n",
+    "        \n",
+    "        min_dist = float('inf')\n",
+    "        target = None\n",
+    "        \n",
+    "        for i in range(self.model.p.n):\n",
+    "            for j in range(self.model.p.m):\n",
+    "                if not self.visited_cells[i][j]:\n",
+    "                    if ((i - center_x) * quadrant_x >= 0 and \n",
+    "                        (j - center_y) * quadrant_y >= 0):\n",
+    "                        dist = abs(i - self.position[0]) + abs(j - self.position[1])\n",
+    "                        if dist < min_dist:\n",
+    "                            min_dist = dist\n",
+    "                            target = (i,j)\n",
+    "                            \n",
+    "        if target:\n",
+    "            path = self.bfs(self.position, target)\n",
+    "            if path and len(path) > 1:\n",
+    "                self.intention = \"move\"\n",
+    "                self.intention_position = path[1]\n",
+    "            else:\n",
+    "                self.default_movement()\n",
+    "        else:\n",
+    "            self.default_movement()\n",
+    "\n",
+    "    def default_movement(self):\n",
+    "        self.intention = \"move\"\n",
+    "        valid_neighbors = [n for n in self.model.get_neighbors(*self.position)\n",
+    "                         if self.model.is_valid_move_position(n)]\n",
+    "        if valid_neighbors:\n",
+    "            self.intention_position = random.choice(valid_neighbors)\n",
+    "        else:\n",
+    "            self.intention = \"wait\""
    ]
   },
   {
@@ -1366,11 +1355,11 @@
     "    }\n",
     "\n",
     "    agent_types = [ \n",
+    "                   'hector_agents',\n",
     "                    'sergio_agents',\n",
     "                    'rodrigo_agents',\n",
     "                    'oscar_agents',\n",
-    "                    'pepe_agents',\n",
-    "                    'hector_agents',\n",
+    "                    'pepe_agents'\n",
     "                    ]\n",
     "\n",
     "    runs = {}\n",
