HectorAgent independent agent

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -752,82 +752,146 @@
    "source": [
     "class HectorAgent(RodrigoAgent):\n",
     "    \"\"\"\n",
-    "    Las reglas de este agente son las siguientes:\n",
-    "        - Divide el espacio en cuadrantes y cada agente se especializa en uno\n",
-    "        - Si encuentra una caja cerca, selecciona la más estratégica considerando:\n",
-    "            * Distancia a puntos de descarga\n",
-    "            * Potencial para completar pilas existentes\n",
-    "        - Si tiene una caja, busca el punto de descarga más eficiente y traza la ruta más corta\n",
-    "        - Si ve cajas que recordó antes, persigue la más cercana\n",
-    "        - De lo contrario, explora su cuadrante en patrón espiral desde el centro\n",
-    "        - Balancea entre explorar áreas nuevas y optimizar rutas conocidas\n",
+    "    agente híbrido que combina:\n",
+    "    \n",
+    "    componente reactivo:\n",
+    "    - responde inmediatamente a cajas cercanas\n",
+    "    - evita obstáculos\n",
+    "    - reacciona a puntos de descarga disponibles\n",
+    "    \n",
+    "    componente deliberativo:\n",
+    "    - mantiene mapa de densidad para exploración informada\n",
+    "    - calcula prioridades de cajas\n",
+    "    - planifica rutas usando bfs\n",
     "    \"\"\"\n",
     "    \n",
     "    def setup(self):\n",
     "        super().setup()\n",
-    "        self.quadrant = None\n",
-    "        self.last_stack_pos = None\n",
-    "    \n",
+    "        self.box_density = [[0.0 for _ in range(self.model.p.m)] \n",
+    "                           for _ in range(self.model.p.n)]\n",
+    "        self.exploration_rate = 0.8  # comenzamos con alta exploración\n",
+    "        self.last_success = 0  # timestamp del último éxito con una caja\n",
+    "        \n",
+    "    def calculate_box_priority(self, pos):\n",
+    "        \"\"\"\n",
+    "        evalúa el valor de una posición de caja basado en:\n",
+    "        - distancia al punto de descarga disponible más cercano\n",
+    "        - potencial para apilar\n",
+    "        - costo total de movimiento\n",
+    "        \"\"\"\n",
+    "        x, y = pos\n",
+    "        \n",
+    "        # encuentra el punto de descarga más cercano con espacio\n",
+    "        discharge_dist = min(\n",
+    "            abs(x - dx) + abs(y - dy) \n",
+    "            for dx, dy in self.discharge_locations\n",
+    "            if self.model.box_count[dx][dy] < 5\n",
+    "        )\n",
+    "        \n",
+    "        stack_potential = sum(\n",
+    "            1 for nx, ny in self.model.get_neighbors(x, y)\n",
+    "            if self.model.is_valid_position((nx, ny)) \n",
+    "            and 0 < self.model.box_count[nx][ny] < 5\n",
+    "        )\n",
+    "        \n",
+    "        # considera el costo total de movimiento\n",
+    "        movement_cost = abs(x - self.position[0]) + abs(y - self.position[1])\n",
+    "        \n",
+    "        # un puntaje más bajo es mejor\n",
+    "        return (discharge_dist + movement_cost) / (1 + 2 * stack_potential)\n",
+    "\n",
+    "    def update_density_map(self):\n",
+    "        \"\"\"\n",
+    "        actualiza la memoria del agente sobre la distribución de cajas\n",
+    "        usando un decay para olvidar poco a poco observaciones viejas\n",
+    "        \"\"\"\n",
+    "        decay = 0.95\n",
+    "        for i in range(self.model.p.n):\n",
+    "            for j in range(self.model.p.m):\n",
+    "                self.box_density[i][j] *= decay\n",
+    "                if self.model.box_count[i][j] > 0:\n",
+    "                    self.box_density[i][j] = 1.0\n",
+    "                    \n",
+    "                    for ni, nj in self.model.get_neighbors(i, j):\n",
+    "                        if self.model.is_valid_position((ni, nj)):\n",
+    "                            self.box_density[ni][nj] = max(\n",
+    "                                self.box_density[ni][nj],\n",
+    "                                0.7  \n",
+    "                            )\n",
+    "\n",
+    "    def find_best_discharge(self):\n",
+    "        \"\"\"\n",
+    "        identifica el punto de descarga más estratégico considerando:\n",
+    "        - capacidad actual\n",
+    "        - distancia\n",
+    "        - potencial para apilar\n",
+    "        \"\"\"\n",
+    "        valid_locations = [\n",
+    "            loc for loc in self.discharge_locations\n",
+    "            if self.model.box_count[loc[0]][loc[1]] < 5\n",
+    "        ]\n",
+    "        \n",
+    "        if not valid_locations:\n",
+    "            return None\n",
+    "            \n",
+    "        return min(\n",
+    "            valid_locations,\n",
+    "            key=lambda loc: (\n",
+    "                abs(loc[0] - self.position[0]) + \n",
+    "                abs(loc[1] - self.position[1])\n",
+    "            )\n",
+    "        )\n",
+    "\n",
     "    def explore(self):\n",
+    "        # actualizamos nuestro conocimiento\n",
+    "        self.update_density_map()\n",
+    "        \n",
     "        if not self.has_box and self.nearby_single_boxes:\n",
+    "            # selección de la caja\n",
     "            self.intention = \"pick_up\"\n",
     "            self.intention_position = min(\n",
     "                self.nearby_single_boxes,\n",
-    "                key=lambda pos: self.calculate_box_priority(pos)\n",
+    "                key=self.calculate_box_priority\n",
     "            )\n",
-    "        else:\n",
-    "            if not self.quadrant:\n",
-    "                self.quadrant = self.id % 4\n",
-    "                \n",
-    "            if self.seen_box_stack:\n",
-    "                self.chase_nearest_box()\n",
-    "            else:\n",
-    "                self.spiral_explore()\n",
-    "\n",
-    "    def calculate_box_priority(self, pos):\n",
-    "        discharge_dist = min(abs(pos[0] - dx) + abs(pos[1] - dy) \n",
-    "                            for dx, dy in self.discharge_locations)\n",
-    "        \n",
-    "        stack_potential = sum(1 for nx, ny in self.model.get_neighbors(*pos)\n",
-    "                            if self.model.is_valid_position((nx, ny)) and\n",
-    "                            0 < self.model.box_count[nx][ny] < 5)\n",
-    "        \n",
-    "        return discharge_dist / (1 + 2*stack_potential)  \n",
-    "                \n",
-    "    def chase_nearest_box(self):\n",
-    "        if self.seen_box_stack:\n",
-    "            target = min(self.seen_box_stack,\n",
-    "                        key=lambda pos: abs(pos[0] - self.position[0]) + \n",
-    "                                      abs(pos[1] - self.position[1]))\n",
+    "            self.last_success = self.model.t\n",
+    "            \n",
+    "        elif self.seen_box_stack:\n",
+    "            # persigue la mejor caja recordada\n",
+    "            target = min(\n",
+    "                self.seen_box_stack,\n",
+    "                key=lambda pos: (\n",
+    "                    self.calculate_box_priority(pos) * \n",
+    "                    (1 + abs(pos[0] - self.position[0]) + \n",
+    "                     abs(pos[1] - self.position[1]))\n",
+    "                )\n",
+    "            )\n",
     "            path = self.bfs(self.position, target)\n",
     "            if path and len(path) > 1:\n",
     "                self.intention = \"move\"\n",
     "                self.intention_position = path[1]\n",
     "            else:\n",
-    "                self.default_movement()\n",
+    "                self.explore_adaptively()\n",
     "        else:\n",
-    "            self.default_movement()\n",
+    "            self.explore_adaptively()\n",
     "\n",
-    "    def spiral_explore(self):\n",
-    "        center_x = self.model.p.n // 2\n",
-    "        center_y = self.model.p.m // 2\n",
-    "        quadrant_x = [-1, -1, 1, 1][self.quadrant]\n",
-    "        quadrant_y = [-1, 1, -1, 1][self.quadrant]\n",
+    "    def explore_adaptively(self):\n",
+    "        unvisited = [\n",
+    "            (i, j) for i in range(self.model.p.n) \n",
+    "            for j in range(self.model.p.m)\n",
+    "            if not self.visited_cells[i][j] and \n",
+    "               self.model.is_valid_position((i, j))\n",
+    "        ]\n",
     "        \n",
-    "        min_dist = float('inf')\n",
-    "        target = None\n",
-    "        \n",
-    "        for i in range(self.model.p.n):\n",
-    "            for j in range(self.model.p.m):\n",
-    "                if not self.visited_cells[i][j]:\n",
-    "                    if ((i - center_x) * quadrant_x >= 0 and \n",
-    "                        (j - center_y) * quadrant_y >= 0):\n",
-    "                        dist = abs(i - self.position[0]) + abs(j - self.position[1])\n",
-    "                        if dist < min_dist:\n",
-    "                            min_dist = dist\n",
-    "                            target = (i,j)\n",
-    "                            \n",
-    "        if target:\n",
+    "        if unvisited:\n",
+    "            # balancea distancia y potencial\n",
+    "            target = min(\n",
+    "                unvisited,\n",
+    "                key=lambda pos: (\n",
+    "                    (abs(pos[0] - self.position[0]) + \n",
+    "                     abs(pos[1] - self.position[1])) *\n",
+    "                    (1 - self.box_density[pos[0]][pos[1]])\n",
+    "                )\n",
+    "            )\n",
     "            path = self.bfs(self.position, target)\n",
     "            if path and len(path) > 1:\n",
     "                self.intention = \"move\"\n",
@@ -839,10 +903,16 @@
     "\n",
     "    def default_movement(self):\n",
     "        self.intention = \"move\"\n",
-    "        valid_neighbors = [n for n in self.model.get_neighbors(*self.position)\n",
-    "                         if self.model.is_valid_move_position(n)]\n",
+    "        valid_neighbors = [\n",
+    "            n for n in self.model.get_neighbors(*self.position)\n",
+    "            if self.model.is_valid_move_position(n)\n",
+    "        ]\n",
     "        if valid_neighbors:\n",
-    "            self.intention_position = random.choice(valid_neighbors)\n",
+    "            # elige dirección hacia áreas de mayor densidad histórica\n",
+    "            self.intention_position = max(\n",
+    "                valid_neighbors,\n",
+    "                key=lambda pos: self.box_density[pos[0]][pos[1]]\n",
+    "            )\n",
     "        else:\n",
     "            self.intention = \"wait\""
    ]
