--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env-opengl (Python 3.9.21)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n env-opengl ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import agentpy as ap\n",
@@ -1491,159 +1480,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_time_taken():\n",
-    "    # ciudado! Se usara 2 ** simulations_log_2. No hagas este valor muy alto\n",
-    "    simulations_log_2 = 2\n",
-    "    iterations_per_sample = 2 \n",
-    "    parameters = {\n",
-    "        'steps': 600,\n",
-    "        'n': 20,\n",
-    "        'm': 20,\n",
-    "        'total_boxes': ap.Values(80),\n",
-    "        'discharge_side': 4,\n",
-    "        'sergio_agents': 0,\n",
-    "        'rodrigo_agents': 0,\n",
-    "        'pepe_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
-    "        'hector_agents': 0,\n",
-    "        'random_agents': 0,\n",
-    "        # 'seed': 22\n",
-    "    }\n",
-    "\n",
-    "    agent_types = [ \n",
-    "                    'sergio_agents',\n",
-    "                    'rodrigo_agents',\n",
-    "                    'oscar_agents',\n",
-    "                    'pepe_agents',\n",
-    "                    'hector_agents',\n",
-    "                    ]\n",
-    "\n",
-    "    agents_time_df = pd.DataFrame(columns=['time_taken', 'agent_amount', 'agent_type'])\n",
-    "    for agent in agent_types: \n",
-    "        # if agent != 'sergio_agents':  # Uncomment to test only your agent\n",
-    "        #     continue\n",
-    "        \n",
-    "        # Asign valid values to current agent only\n",
-    "        for other_agent in agent_types:\n",
-    "            if agent == other_agent:\n",
-    "                parameters[other_agent] = 5\n",
-    "            else: \n",
-    "                parameters[other_agent] = 0\n",
-    "                \n",
-    "        sample = ap.Sample(\n",
-    "            parameters,\n",
-    "            n= 2 ** simulations_log_2,\n",
-    "            method='saltelli',\n",
-    "            calc_second_order=False\n",
-    "        )\n",
-    "        exp = ap.Experiment(BoxWarehouseModel, sample, iterations=iterations_per_sample, record=True,)\n",
-    "        results = exp.run()\n",
-    "        \n",
-    "        # Update agents vs time_taken\n",
-    "        agent_df = results.parameters.sample\n",
-    "        agent_df = agent_df[[agent]]\n",
-    "        reporters_df : pd.DataFrame = results.reporters[['time_taken', 'percentage_time_taken', 'total_moves']]\n",
-    "        reporters_df = reporters_df[reporters_df['percentage_time_taken'] <= 1] # Filter only finished runs to clean\n",
-    "        \n",
-    "        reporters_df_time = reporters_df[['time_taken']]\n",
-    "        temp_agent_time_df = reporters_df_time.merge(agent_df, on='sample_id', how='left')\n",
-    "        temp_agent_time_df = temp_agent_time_df.reset_index()\n",
-    "        temp_agent_time_df = temp_agent_time_df[['time_taken', agent]]\n",
-    "        temp_agent_time_df.columns = ['time_taken', 'agent_amount'] \n",
-    "        temp_agent_time_df['agent_type'] = agent\n",
-    "        agents_time_df = pd.concat([agents_time_df, temp_agent_time_df])\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    sns.scatterplot(data=agents_time_df, x='agent_amount', y='time_taken', hue='agent_type', s=40)\n",
-    "    plt.title('Agent amount vs time taken to clean all')\n",
-    "    # Adjust Layout\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_mov_amount():\n",
-    "    # ciudado! Se usara 2 ** simulations_log_2. No hagas este valor muy alto\n",
-    "    simulations_log_2 = 2\n",
-    "    iterations_per_sample = 2 \n",
-    "    parameters = {\n",
-    "        'steps': 600,\n",
-    "        'n': 20,\n",
-    "        'm': 20,\n",
-    "        'total_boxes': 80,\n",
-    "        'discharge_side': 4,\n",
-    "        'sergio_agents': 0,\n",
-    "        'rodrigo_agents': 0,\n",
-    "        'pepe_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
-    "        'hector_agents': 0,\n",
-    "        'random_agents': 0,\n",
-    "        'seed': 22\n",
-    "    }\n",
-    "\n",
-    "    agent_types = [ \n",
-    "                    'sergio_agents',\n",
-    "                    'rodrigo_agents',\n",
-    "                    'oscar_agents',\n",
-    "                    'pepe_agents',\n",
-    "                    'hector_agents',\n",
-    "                    ]\n",
-    "\n",
-    "    agents_mov_df = pd.DataFrame(columns=['total_moves', 'agent_amount', 'agent_type'])\n",
-    "    for agent in agent_types: \n",
-    "        # if agent != 'sergio_agents':  # Uncomment to test only your agent\n",
-    "        #     continue\n",
-    "        \n",
-    "        # Asign valid values to current agent only\n",
-    "        for other_agent in agent_types:\n",
-    "            if agent == other_agent:\n",
-    "                parameters[other_agent] = 5\n",
-    "            else: \n",
-    "                parameters[other_agent] = 0\n",
-    "                \n",
-    "        sample = ap.Sample(\n",
-    "            parameters,\n",
-    "            n= 2 ** simulations_log_2,\n",
-    "            method='saltelli',\n",
-    "            calc_second_order=False\n",
-    "        )\n",
-    "        exp = ap.Experiment(BoxWarehouseModel, sample, iterations=iterations_per_sample, record=True)\n",
-    "        results = exp.run()\n",
-    "        \n",
-    "        # Update agents vs total_movements\n",
-    "        agent_df = results.parameters.sample\n",
-    "        agent_df = agent_df[[agent]]\n",
-    "        reporters_df : pd.DataFrame = results.reporters[['time_taken', 'percentage_time_taken', 'total_moves']]\n",
-    "        reporters_df = reporters_df[reporters_df['percentage_time_taken'] <= 1] # Filter only finished runs to clean\n",
-    "        \n",
-    "        reporters_df_moves = reporters_df[['total_moves']]\n",
-    "        temp_agent_mov = reporters_df_moves.merge(agent_df, on='sample_id', how='left')\n",
-    "        temp_agent_mov = temp_agent_mov.reset_index()\n",
-    "        temp_agent_mov = temp_agent_mov[['total_moves', agent]]\n",
-    "        temp_agent_mov.columns = ['total_moves', 'agent_amount']\n",
-    "        temp_agent_mov['agent_type'] = agent\n",
-    "        agents_mov_df = pd.concat([agents_mov_df, temp_agent_mov])\n",
-    "        \n",
-    "    \n",
-    "    sns.scatterplot(data=agents_mov_df, x='agent_amount', y='total_moves', hue='agent_type', s=40)\n",
-    "    plt.title('Agent amount vs total movements done')\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def show_animation(parameters=None):\n",
     "    if parameters is None:\n",
     "        parameters = {\n",
@@ -1749,9 +1585,7 @@
    "source": [
     "options = {\n",
     "    'show_animation': False,\n",
-    "    'multirun_experiment': True, # Tested\n",
-    "    'test_time_taken': False, # Not Working\n",
-    "    'test_mov_amount': False, # Not Working\n",
+    "    'multirun_experiment': False, # Tested\n",
     "    'single_experiment': False, # Tested \n",
     "} # Estas siempre tienen que estar en falso a menos que estemos probando algo porque tambien se llaman desde PlanoCarros"
    ]
@@ -1787,35 +1621,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if options['test_time_taken']:\n",
-    "    test_time_taken()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if options['test_mov_amount']:\n",
-    "    test_mov_amount()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if options[\"single_experiment\"]: # No borrar\n",
     "    parameters = {\n",
     "        'steps': 100,\n",
@@ -1834,33 +1639,11 @@
     "    model = BoxWarehouseModel(parameters)\n",
     "    results = model.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "print(len(model.rounds))\n",
-    "for round in model.rounds:\n",
-    "    print(\"New Round\")\n",
-    "    for move in round:\n",
-    "        print(move)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-opengl",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1873,8 +1656,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
